testdata/golden/sema/valid/concurrency/task_all_awaited.sg
// Valid: All tasks properly awaited

async fn compute(x: int) -> int {
    return x * 2;
}

pub async fn test_all_awaited() -> int {
    let t1 = task compute(1);
    let t2 = task compute(2);
    let t3 = task compute(3);

    let r1: int = compare t1.await() {
        Success(v) => v;
        Cancelled() => 0;
    };
    let r2: int = compare t2.await() {
        Success(v) => v;
        Cancelled() => 0;
    };
    let r3: int = compare t3.await() {
        Success(v) => v;
        Cancelled() => 0;
    };

    return r1 + r2 + r3;
}
